Fix major bug in table.py. Comparison charts for README.

--- a/README.ipynb
+++ b/README.ipynb
@@ -17,6 +17,7 @@
     "- [Installation](#installation) *Wherein is answered the question of how to get it*\n",
     "- [Documentation by Example](#documentation-by-example) *Wherein is answered the question of how to make it go go go!*\n",
     "    - [Plots](#ye-olde-plots)\n",
+    "        - [Comparison Charts](#comparison-charts)\n",
     "        - [Dot Charts](#dot-charts)\n",
     "        - [Horizontal Dot Charts](#horizontal-dot-charts)\n",
     "        - [Scaled-Up Numbers](#scaled-up-numbers)\n",
@@ -106,6 +107,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Comparison Charts\n",
+    "Comparison charts are, at least minimally, just tables with checkmarks and X's in the cells. See [Tables](#tables). There is no Unicode fullwidth checkmark, so you need to use something else that is basically something in the ASCII subset that is represented by the Unicode fullwidth set.\n",
+    "\n",
+    "The same caveat applies. You probably want to use single letter column and row headers, and should at least use all row headers of the same length, and then include a key below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "　　　　　　　　　Ｃｏｍ　Ｖｅｒ　Ａｗｅ\n",
+      "Ｍｐｌｉｂ　　　　Ｔ　　　Ｔ　　　Ｆ　　\n",
+      "Ｇｇｐｌｏｔ２　　Ｔ　　　Ｔ　　　Ｆ　　\n",
+      "Ｐｉｌｔｄｏｗｎ　Ｆ　　　Ｆ　　　Ｔ　　\n",
+      "\n",
+      "Mplib = Matplotlib\n",
+      "Com = Comprehensive; Ver = Well-verified; Awe = Awesome\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.table as tbl\n",
+    "import piltdown.literals as lit\n",
+    "\n",
+    "# Data based on, well duh, obviously.\n",
+    "print(\"\\n\" +\n",
+    "    tbl.table([[\"\",         \"Com\", \"Ver\", \"Awe\"],\n",
+    "               [\"Mplib\",    \"T\",   \"T\",   \"F\"],\n",
+    "               [\"Ggplot2\",  \"T\",   \"T\",   \"F\"],\n",
+    "               [\"Piltdown\", \"F\",   \"F\",   \"T\"]]\n",
+    "              ) +\n",
+    "                \"\\nMplib = Matplotlib\\n\" +\n",
+    "                \"Com = Comprehensive; Ver = Well-verified; Awe = Awesome\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Dot Charts"
    ]
   },
@@ -120,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -596,34 +650,35 @@
     "\n",
     "A list of plots I got somewhere that looked at a quick glance like they might be possible. Not to be interpreted as firm intentions:\n",
     "\n",
-    "- horiz bar\n",
-    "- heatmap\n",
-    "- stacked bar\n",
-    "- boxplot\n",
     "- column sparkline -- Well duh. The one that started it all.\n",
+    "- bullet diagram\n",
+    "- comparison chart\n",
+    "- stem and leaf \n",
+    "- waffle chart\n",
+    "- horiz bar chart\n",
+    "- heatmap\n",
+    "- boxplot\n",
+    "- stacked bar\n",
+    "- horiz hist\n",
+    "\n",
     "- treemap\n",
     "- matrix diagram\n",
     "- pictorial fraction\n",
-    "- horiz hist\n",
-    "- waffle\n",
     "- funnel\n",
     "- linear process diag\n",
     "- grouped bar\n",
     "- nested/layered proportional area\n",
     "- pictorial unit -- basically allow custom characters for the dot chart, one per line\n",
-    "- dot plot\n",
     "- pyramid diag\n",
     "- dumbell plot\n",
-    "- bullet diag\n",
     "- partition layer chart icicle diag\n",
     "- stepped line graph\n",
-    "- scaled up number\n",
     "- lollypop chart\n",
-    "- comparison chart\n",
+    "\n",
     "- kagi chart\n",
     "- dot matix\n",
     "- pictogram\n",
-    "- stem and leaf \n"
+    "\n"
    ]
   },
   {
