Touchups and TODOs.

--- a/README.ipynb
+++ b/README.ipynb
@@ -108,7 +108,7 @@
    "metadata": {},
    "source": [
     "#### Comparison Charts\n",
-    "Comparison charts are, at least minimally, just tables with checkmarks and X's in the cells. See [Tables](#tables). There is no Unicode fullwidth checkmark, so you need to use something else that is basically something in the ASCII subset that is represented by the Unicode fullwidth set.\n",
+    "Comparison charts are, at least minimally, just tables with checkmarks and X's in the cells. See [Tables](#tables). There is no Unicode fullwidth checkmark, so you need to use something else that is basically something in the ASCII subset that is represented by the Unicode fullwidth set. X's and O's or T's (for True) and F's (for False) are probably the best bets.\n",
     "\n",
     "The same caveat applies. You probably want to use single letter column and row headers, and should at least use all row headers of the same length, and then include a key below."
    ]
@@ -648,36 +648,31 @@
     "- Well, yeah, maybe I do want to do bold and italic fonts as a utility function. Also maybe some variables bound to generally useful Unicode characters (smileys, Harvey balls, etc)\n",
     "- A simple `count_chars()` utility to verify the whole thing is ≤ 280 chars.\n",
     "\n",
-    "A list of plots I got somewhere that looked at a quick glance like they might be possible. Not to be interpreted as firm intentions:\n",
+    "A list of plots I got somewhere that looked at a quick glance like they might be possible. Not to be interpreted as firm intentions. More or less in descending order of priority.\n",
     "\n",
     "- column sparkline -- Well duh. The one that started it all.\n",
     "- bullet diagram\n",
-    "- comparison chart\n",
     "- stem and leaf \n",
     "- waffle chart\n",
-    "- horiz bar chart\n",
+    "- horiz barchart\n",
     "- heatmap\n",
     "- boxplot\n",
     "- stacked bar\n",
-    "- horiz hist\n",
-    "\n",
-    "- treemap\n",
-    "- matrix diagram\n",
-    "- pictorial fraction\n",
-    "- funnel\n",
-    "- linear process diag\n",
-    "- grouped bar\n",
-    "- nested/layered proportional area\n",
+    "- grouped barchart\n",
+    "- lollypop chart\n",
     "- pictorial unit -- basically allow custom characters for the dot chart, one per line\n",
-    "- pyramid diag\n",
+    "\n",
+    "Maybe look at later.\n",
+    "- treemap\n",
+    "- funnel\n",
+    "- linear process diagram\n",
+    "- nested/layered proportional area \n",
+    "- pyramid diagram\n",
     "- dumbell plot\n",
     "- partition layer chart icicle diag\n",
     "- stepped line graph\n",
-    "- lollypop chart\n",
-    "\n",
     "- kagi chart\n",
     "- dot matix\n",
-    "- pictogram\n",
     "\n"
    ]
   },
