Readme waffle example and minor touchups.

--- a/README.ipynb
+++ b/README.ipynb
@@ -13,6 +13,7 @@
     "**YE OLDE TABLE OF CONTENTS**\n",
     "\n",
     "- [Introduction](#introduction) *Wherein is answered the question of what it is and what it's for*\n",
+    "    - [Caveats](#caveats)\n",
     "    - [The Basic Idea](#the-basic-idea)\n",
     "- [Installation](#installation) *Wherein is answered the question of how to get it*\n",
     "- [Documentation by Example](#documentation-by-example) *Wherein is answered the question of how to make it go go go!*\n",
@@ -23,6 +24,7 @@
     "        - [Scaled-Up Numbers](#scaled-up-numbers)\n",
     "        - [Tables](#tables)\n",
     "        - [Tally Charts](#tally-charts)\n",
+    "        - [Waffle Charts](#waffle-charts)\n",
     "        - [Win/Loss Sparklines](#win-loss-sparklines)\n",
     "    - [Utilities](#utilities)\n",
     "        - [cut_above()](#cut_above) -- Add a \"cut above this line\" line to the output\n",
@@ -38,27 +40,39 @@
     "\n",
     "*or, What is it? and what's it for?*\n",
     "\n",
-    "Piltdown is a tiny, nay, even trivial Python library\n",
+    "**Piltdown is a tiny, nay, even trivial Python library\n",
     "that generates Unicode strings of bar charts\n",
     "and some other data visualization thingies\n",
-    "which are meant to be included in your Twitter posts.\n",
+    "which are meant to be included in your Twitter posts.**\n",
     "\n",
     "See the Documentation section below for examples.\n",
     "\n",
     "What kind of charts, you ask? Also see the Documentation section for examples.\n",
     "\n",
-    "But see all the caveats.\n",
+    "But see all the --\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Caveats\n",
+    "\n",
     "I mean, they're pretty obvious.\n",
-    "There is only so much you can do with nothing but text\n",
-    "that is always left-justified,\n",
-    "displayed in a very narrow column,\n",
-    "and in a variable-width font--\n",
-    "even with Unicode.\n",
-    "If you think you can pull off a scatter plot with variable width Unicode in the space of a tweet, by all means, send me a PR.\n",
+    "\n",
+    "1. There is only so much you can do with nothing but text that is always left-justified, displayed in a very narrow column, and in a variable-width font--even with Unicode. If you think you can pull off a scatter plot with variable width Unicode in the space of a tweet, by all means, send me a PR.\n",
+    "\n",
+    "2. Screen readers. I don't know how many times I mention it below, but Unicode hacks are inherently unfriendly to the blind. Beware.\n",
     "\n",
     "I wrote this for the fun of it,\n",
-    "on a lark. Don't get all testy with me.\n",
-    "\n",
+    "on a lark. Don't get all testy with me."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### The Basic Idea\n",
     "\n",
     "For most of the types of plot, you will specify your data set,\n",
@@ -80,13 +94,13 @@
     "\n",
     "## Installation\n",
     "\n",
-    "Clone the repository and do \n",
+    "Clone the repository, `cd` to your new `piltdown` directory, and then do --\n",
     "\n",
     "    pip install .\n",
     "    \n",
     "or the local equivalent (eg. `pip3 install .` )\n",
     "\n",
-    "Or at some point maybe I will make it installable from PyPi or whatever it is.\n",
+    "Or at some point maybe I will make it installable from PyPi or whatever it's called.\n",
     "\n",
     "Or you can just, like, load up the files any old way you want. It's pretty simple.\n",
     "\n",
@@ -110,7 +124,7 @@
     "#### Comparison Charts\n",
     "Comparison charts are, at least minimally, just tables with checkmarks and X's in the cells. See [Tables](#tables). There is no Unicode fullwidth checkmark, so you need to use something else that is basically something in the ASCII subset that is represented by the Unicode fullwidth set. X's and O's or T's (for True) and F's (for False) are probably the best bets.\n",
     "\n",
-    "The same caveat applies. You probably want to use single letter column and row headers, and should at least use all row headers of the same length, and then include a key below."
+    "The same caveat applies. Column and row headers are best kept very short."
    ]
   },
   {
@@ -408,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -535,6 +549,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Waffle Charts\n",
+    "\n",
+    "Just at the moment you can select your own glyphs (or use the defaults, `literals.WAFFLES`) and that's about it. Waffles fill from top to bottom, left to right, just like European reading order. I intend to write something that will let you fill from top to bottom, then left to right (like... er, ancient Egyption reading order? -- how do I know?) Anyway, writing the routine that rotates ragged two-dimensional lists is, you know, a job for a real programmer.\n",
+    "\n",
+    "Also, at the moment some glyphs aren't the same size as others in some fonts, so a little testing on Twitter might be called for."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pets Owned by Aliens by %\n",
+      "▩▩▩▩▩▩▩▩▩▩\n",
+      "▥▥▥▥▥▥▥▥▥▥\n",
+      "▥▥▥▥▥▥▥▥▥▥\n",
+      "▥▥▥▥▥▥▥▥▥▥\n",
+      "▥▥▥▥▥▥▥▥▥▥\n",
+      "▥▥▥▥▥▥▥▥▥▥\n",
+      "▥▥▥▥▥▥▥▥▥▥\n",
+      "▥▥▥▥▥▥▥▥▥▥\n",
+      "▦▦▦▦▦▥▥▥▥▥\n",
+      "▦▦▦▦▦▦▦▦▦▦\n",
+      "\n",
+      "▩ = Babel Fish; ▥ = Tribble; ▦ = Wookie\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.waffle as wfl\n",
+    "\n",
+    "print(\"Pets Owned by Aliens by %\\n\" + \n",
+    "      wfl.waffle([10, 75, 15], [\"Babel Fish\", \"Tribble\", \"Wookie\"])\n",
+    "     )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Utilities\n",
     "\n",
     "Various little helpers which you may variously find helpful."
@@ -558,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
