Document column sparklines.

--- a/README.ipynb
+++ b/README.ipynb
@@ -18,6 +18,7 @@
     "- [Installation](#installation) *Wherein is answered the question of how to get it*\n",
     "- [Documentation by Example](#documentation-by-example) *Wherein is answered the question of how to make it go go go!*\n",
     "    - [Plots](#ye-olde-plots)\n",
+    "        - [Column Sparklines](#column-sparklines)\n",
     "        - [Comparison Charts](#comparison-charts)\n",
     "        - [Dot Charts](#dot-charts)\n",
     "        - [Horizontal Dot Charts](#horizontal-dot-charts)\n",
@@ -115,6 +116,45 @@
     "\n",
     "### Ye Olde Plots\n",
     "In alphabetical order:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Column Sparklines\n",
+    "\n",
+    "The Twitter plot that started it all! Or at least, that I noticed had already been done and inspired the rest of this. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Example\n",
+    "\n",
+    "Note that there are only 8 levels available, and all your numbers will be scaled based on your highest value. This isn't high-precision stuff here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Daily how much I like Twitter the last 10 days ▂▄▇█　▃▄▄▁▄ on a scale of 1 to 10... so don't get your hopes up about another post.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.column_sparkline as cspar\n",
+    "\n",
+    "print(\"Daily how much I like Twitter the last 10 days \" +\n",
+    "     cspar.column_sparkline([2,4,8,10,0,3,4,5,1,4]) +\n",
+    "     \" on a scale of 1 to 10... so don't get your hopes up about another post.\")"
    ]
   },
   {
@@ -716,7 +756,6 @@
     "\n",
     "A list of plots I got somewhere that looked at a quick glance like they might be possible. Not to be interpreted as firm intentions. More or less in descending order of priority.\n",
     "\n",
-    "- column sparkline -- Well duh. The one that started it all.\n",
     "- bullet diagram\n",
     "- stem and leaf \n",
     "- horiz barchart\n",
