--- a/README.ipynb
+++ b/README.ipynb
@@ -138,23 +138,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Daily how much I like Twitter the last 10 days ▂▄▇█　▃▄▄▁▄ on a scale of 1 to 10... so don't get your hopes up about another post.\n"
+      "Daily how much I like Twitter the last 10 days: ▂▄▇█　▃▄▄▁▄ on a scale of 1 to 10...\n",
+      "so don't get your hopes up about another post.\n"
      ]
     }
    ],
    "source": [
     "import piltdown.column_sparkline as cspar\n",
     "\n",
-    "print(\"Daily how much I like Twitter the last 10 days \" +\n",
+    "# Data channeled by me from the spirit of an ancient cat.\n",
+    "print(\"Daily how much I like Twitter the last 10 days: \" +\n",
     "     cspar.column_sparkline([2,4,8,10,0,3,4,5,1,4]) +\n",
-    "     \" on a scale of 1 to 10... so don't get your hopes up about another post.\")"
+    "     \" on a scale of 1 to 10...\\nso don't get your hopes up about another post.\")"
    ]
   },
   {
@@ -632,6 +634,7 @@
    "source": [
     "import piltdown.waffle as wfl\n",
     "\n",
+    "# Completely real data.\n",
     "print(\"Pets Owned by Aliens by %\\n\" + \n",
     "      wfl.waffle([10, 75, 15], [\"Babel Fish\", \"Tribble\", \"Wookie\"])\n",
     "     )"
