--- a/README.ipynb
+++ b/README.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Piltdown\n",
-    "\n",
+    "[![Generic badge](https://img.shields.io/badge/Works-Kinda-<COLOR>.svg)](https://shields.io/)\n",
     "<img src=\"Piltdown_man.jpg\" width=\"100px\" align=\"right\" alt=\"Piltdown Man\"/>\n",
     "\n",
     "*\"Data visualiation for your tweets... making your mindless propaganda look more scientific since 2021!\"*\n",
@@ -28,6 +28,7 @@
     "        - [Waffle Charts](#waffle-charts)\n",
     "        - [Win/Loss Sparklines](#win-loss-sparklines)\n",
     "    - [Utilities](#utilities)\n",
+    "        - [bold()](#bold) -- Bold output using Unicode mathematical bold\n",
     "        - [cut_above()](#cut_above) -- Add a \"cut above this line\" line to the output\n",
     "        - [cut_below()](#cut_below) -- Add a \"cut below this line\" line to the output\n",
     "        - [to_monospace()](#to_monospace) -- Write text in Unicode fake monospace (used internally for labels too)\n",
@@ -36,6 +37,7 @@
     "- [Hacking](#hacking) *Wherein is -- oh, this is getting boring*\n",
     "    - [Project Goals](#project-goals)\n",
     "    - [Todo](#todo)\n",
+    "- [Credits](#credits)\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -653,6 +655,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### bold()\n",
+    "\n",
+    "Fake bold using the Unicode mathematical bold characters for Latin and Greek capitals and miniscules, and Arabic digits. Yet again I warn you: screen readers might not like this.\n",
+    "\n",
+    "You can include any other character you like (eg., punctuation characters) but they will simply be passed to the return string unchanged."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a 𝐯𝐞𝐫𝐲 \"𝐢𝐦𝐩𝐨𝐫𝐭𝐚𝐧𝐭\" 𝐭𝐡𝐢𝐧𝐠 𝐭𝐨 𝐬𝐚𝐲!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.util as util\n",
+    "\n",
+    "print(\"This is a \" + util.bold('very \"important\" thing to say!'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### to_monospace\n",
     "\n",
     "Convert text to monospace using then Unicode \"fullwidth\" characters. Yet again I mention that this does not play well with screen readers."
@@ -667,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +776,7 @@
     "- Simple\n",
     "- *Really simple*\n",
     "- Simple enough to just write static documentation-by-examples here in the README\n",
-    "- Simple enough that the examples in the documentation here can serve as a test suite\n",
+    "- Simple enough that the examples in the documentation here can serve as a rudimentary test suite\n",
     "- (Mostly) don't try to do anything but create the charts and graphs.\n",
     "  Just functions that return strings.\n",
     "  Leave Twitter posting, statistical preprocessing,\n",
@@ -755,7 +794,7 @@
     "#### TODO\n",
     "\n",
     "- Well, yeah, maybe I do want to do bold and italic fonts as a utility function. Also maybe some variables bound to generally useful Unicode characters (smileys, Harvey balls, etc)\n",
-    "- A simple `count_chars()` utility to verify the whole thing is ≤ 280 chars.\n",
+    "- Tweet threads? Could it be done? *Should* it be done? Well, yes and no, of course...\n",
     "\n",
     "A list of plots I got somewhere that looked at a quick glance like they might be possible. Not to be interpreted as firm intentions. More or less in descending order of priority.\n",
     "\n",
@@ -784,10 +823,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Credits\n",
+    "\n",
+    "In the immortal words of Olin Shivers: I did it. I did it all, by myself."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
