--- a/README.ipynb
+++ b/README.ipynb
@@ -38,6 +38,7 @@
     "    - [Project Goals](#project-goals)\n",
     "    - [Todo](#todo)\n",
     "- [Credits](#credits)\n",
+    "- [Final words](#final-words)\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -80,7 +81,7 @@
     "\n",
     "For most of the types of plot, you will specify your data set,\n",
     "(typically a list, list of tuples, dict, etc.).\n",
-    "Generating this from a datafrane or other form is your problem--Piltdown just generates strings. That's all.\n",
+    "Generating this from a dataframe or other form is your problem--Piltdown just generates strings. That's all.\n",
     "There are a million utilities that could be included\n",
     "to post your string to Twitter for you,\n",
     "or to do other Unicode tricks,\n",
@@ -595,7 +596,11 @@
    "source": [
     "#### Waffle Charts\n",
     "\n",
-    "Just at the moment you can select your own glyphs (or use the defaults, `literals.WAFFLES`) and that's about it. Waffles fill from top to bottom, left to right, just like European reading order. I intend to write something that will let you fill from top to bottom, then left to right (like... er, ancient Egyption reading order? -- how do I know?) Anyway, writing the routine that rotates ragged two-dimensional lists is, you know, a job for a real programmer.\n",
+    "Just at the moment you can select your own glyphs (or use the defaults, `literals.WAFFLES`) and that's about it. \n",
+    "\n",
+    "**Note** that I think these glyphs are being counted as two characters each, so that means a 10x10 waffle would cound as 210 characters on your limit (including the 10 newline characters). So... be knowing of that.\n",
+    "\n",
+    "Waffles fill from top to bottom, first left-to-right, then right-to-left in alternating lines. I intend to write something that will let you fill from top to bottom, but writing the routine that rotates ragged two-dimensional lists is, you know, a job for a real programmer.\n",
     "\n",
     "Also, at the moment some glyphs aren't the same size as others in some fonts, so a little testing on Twitter might be called for."
    ]
@@ -783,6 +788,7 @@
     "  and mixing output with other strings (titles, general writing, etc.)\n",
     "  to the user/other libraries.\n",
     "- Easy to use.\n",
+    "- Portable with no dependencies other than basic Python 3\n",
     "- Just focused on the Twitter use case.\n",
     "  Not a general solution to the *Grand ASCII-art Data Viz Problem*,\n",
     "  which is never-ending.\n",
@@ -793,7 +799,7 @@
     "\n",
     "#### TODO\n",
     "\n",
-    "- Well, yeah, maybe I do want to do bold and italic fonts as a utility function. Also maybe some variables bound to generally useful Unicode characters (smileys, Harvey balls, etc)\n",
+    "- Maybe an italic font as well, though that seems less useful. Also maybe some variables bound to generally useful Unicode characters (smileys, Harvey balls, etc)\n",
     "- Tweet threads? Could it be done? *Should* it be done? Well, yes and no, of course...\n",
     "\n",
     "A list of plots I got somewhere that looked at a quick glance like they might be possible. Not to be interpreted as firm intentions. More or less in descending order of priority.\n",
@@ -834,6 +840,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Final words\n",
+    "\n",
+    "This yak... is shaved."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
