--- a/README.ipynb
+++ b/README.ipynb
@@ -69,6 +69,8 @@
     "\n",
     "2. Screen readers. I don't know how many times I mention it below, but Unicode hacks are inherently unfriendly to the blind. Beware.\n",
     "\n",
+    "3. You will see weird font compatibility issues. Github won't even render everything right every time in this README on Qutebrowser under Linux for me. Sometimes the column sparkline glyphs are weirdly off-center, sometimes the tally marks are missing.... Who knows?\n",
+    "\n",
     "I wrote this for the fun of it,\n",
     "on a lark. Don't get all testy with me."
    ]
@@ -801,6 +803,8 @@
     "\n",
     "- Maybe an italic font as well, though that seems less useful. Also maybe some variables bound to generally useful Unicode characters (smileys, Harvey balls, etc)\n",
     "- Tweet threads? Could it be done? *Should* it be done? Well, yes and no, of course...\n",
+    "- Instead of telling people to have labels all the same length (eg. horizontal dot chart) just pad to max(len(...))\n",
+    "- Basically, I'm not going to release this until the horizontal bar chart at least is done, as that's the most important one... possibly the vertical bar chart as well.\n",
     "\n",
     "A list of plots I got somewhere that looked at a quick glance like they might be possible. Not to be interpreted as firm intentions. More or less in descending order of priority.\n",
     "\n",
