Fix monospace/fullwidth and document.

--- a/README.ipynb
+++ b/README.ipynb
@@ -31,7 +31,8 @@
     "        - [bold()](#bold) -- Bold output using Unicode mathematical bold\n",
     "        - [cut_above()](#cut_above) -- Add a \"cut above this line\" line to the output\n",
     "        - [cut_below()](#cut_below) -- Add a \"cut below this line\" line to the output\n",
-    "        - [to_monospace()](#to_monospace) -- Write text in Unicode fake monospace (used internally for labels too)\n",
+    "        - [fullwidth()](#fullwidth) -- Write text in Unicode fullwidth (alternate monospa\n",
+    "        - [monospace()](#monospace) -- Write text in Unicode fake monospace\n",
     "        - [with_char_count()](#with_char_count) -- Return failure message if a string is > 280 characters long\n",
     "        - [with_cut_lines()](#with_cut_lines) -- Wrap output in cut_below() and cut_above()\n",
     "- [Hacking](#hacking) *Wherein is -- oh, this is getting boring*\n",
@@ -625,14 +626,14 @@
      "text": [
       "Pets Owned by Aliens by %\n",
       "▩▩▩▩▩▩▩▩▩▩\n",
+      "▩▩▩▩▩▩▥▥▥▥\n",
       "▥▥▥▥▥▥▥▥▥▥\n",
       "▥▥▥▥▥▥▥▥▥▥\n",
       "▥▥▥▥▥▥▥▥▥▥\n",
       "▥▥▥▥▥▥▥▥▥▥\n",
       "▥▥▥▥▥▥▥▥▥▥\n",
       "▥▥▥▥▥▥▥▥▥▥\n",
-      "▥▥▥▥▥▥▥▥▥▥\n",
-      "▦▦▦▦▦▥▥▥▥▥\n",
+      "▦▦▦▦▦▦▦▦▥▥\n",
       "▦▦▦▦▦▦▦▦▦▦\n",
       "\n",
       "▩ = Babel Fish; ▥ = Tribble; ▦ = Wookie\n",
@@ -645,7 +646,7 @@
     "\n",
     "# Completely real data.\n",
     "print(\"Pets Owned by Aliens by %\\n\" + \n",
-    "      wfl.waffle([10, 75, 15], [\"Babel Fish\", \"Tribble\", \"Wookie\"])\n",
+    "      wfl.waffle([16, 66, 18], [\"Babel Fish\", \"Tribble\", \"Wookie\"])\n",
     "     )"
    ]
   },
@@ -699,9 +700,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### to_monospace\n",
+    "#### fullwidth\n",
     "\n",
-    "Convert text to monospace using then Unicode \"fullwidth\" characters. Yet again I mention that this does not play well with screen readers."
+    "Convert text to fake monospace using the Unicode \"fullwidth\" character set. Yet again I mention that this does not play well with screen readers. With this you have access to punctuation characters (unlike the monospace() function) but the tradeoff is that they are very wide, and it doesn't take many to go as wide as works on a Twitter on a cell phone."
    ]
   },
   {
@@ -727,7 +728,43 @@
    "source": [
     "import piltdown.util as util\n",
     "\n",
-    "print(util.to_monospace(\"Witty example text.\"))"
+    "print(util.fullwidth(\"Witty example text.\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### monospace\n",
+    "\n",
+    "Fake monospace with Unicode mathimatical monospace. The only characters, though, are Latin capitals and miniscules and spaces (which seem to work for some reason) and Arabic digits. **NOTE** No punctuation! So, if you need punctuation, try `fullwidth()` which has punctuation, but which is very wide, and therefore fewer fit in a tweet on a narrow cell phone screen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "𝚃𝚑𝚎𝚜𝚎 𝚏𝚛𝚊𝚋𝚓𝚘𝚞𝚜 𝚝𝚎𝚜𝚝 𝚕𝚒𝚗𝚎𝚜 𝚜𝚑𝚘𝚠𝚒𝚗𝚐𝚕𝚢 𝚜𝚑𝚘𝚠\n",
+      "𝚝𝚑𝚎𝚢 𝚕𝚒𝚗𝚎 𝚞𝚙 𝚠𝚒𝚝𝚑 𝚠𝚑𝚊𝚝 𝚠𝚎 𝚔𝚗𝚘𝚠𝚒𝚗𝚐𝚕𝚢 𝚔𝚗𝚘𝚠\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.util as util\n",
+    "\n",
+    "print(util.monospace(\"These frabjous test lines showingly show\\nthey line up with what we knowingly know\"))"
    ]
   },
   {
@@ -750,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
