Some random README changes.

--- a/README.ipynb
+++ b/README.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "2. Screen readers. I don't know how many times I mention it below, but Unicode hacks are inherently unfriendly to the blind. Beware.\n",
     "\n",
-    "3. You will see weird font compatibility issues. Github won't even render everything right every time in this README on Qutebrowser under Linux for me. Sometimes the column sparkline glyphs are weirdly off-center, sometimes the tally marks are missing.... Who knows?\n",
+    "3. You will see weird font compatibility issues. Github won't even render everything right every time in this README on Qutebrowser under Linux for me. Sometimes the column sparkline glyphs are weirdly off-center, sometimes the tally marks are missing.... Who knows? Some platform/font combinations render this stuff correctly, some don't. That's just all there is to it.\n",
     "\n",
     "I wrote this for the fun of it,\n",
     "on a lark. Don't get all testy with me."
