Fine-tuning hbar.

--- a/README.ipynb
+++ b/README.ipynb
@@ -21,6 +21,7 @@
     "        - [Column Sparklines](#column-sparklines)\n",
     "        - [Comparison Charts](#comparison-charts)\n",
     "        - [Dot Charts](#dot-charts)\n",
+    "        - [Horizontal Bar Charts](#horizontal-bar-charts)\n",
     "        - [Horizontal Dot Charts](#horizontal-dot-charts)\n",
     "        - [Scaled-Up Numbers](#scaled-up-numbers)\n",
     "        - [Tables](#tables)\n",
@@ -315,6 +316,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Horizontal Bar Charts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "　　　Ｃａｔｓ███████████▌92\n",
+      "　　　Ｄｏｇｓ█████▍43\n",
+      "Ｍｏｎｋｅｙｓ██▉23\n",
+      "　　Ｍｏｏｓｅ███████████▉95\n",
+      "　　　　　Ｍｅ0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import piltdown.hbar_chart as hbar\n",
+    "\n",
+    "print(hbar.hbar([92,43,23,95,0],[\"Cats\",\"Dogs\",\"Monkeys\",\"Moose\",\"Me\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Horizontal Dot Charts\n",
     "\n",
     "Not to be confused with a dot plot.\n",
@@ -329,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
