--- a/README.ipynb
+++ b/README.ipynb
@@ -328,26 +328,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "　　　Ｃａｔｓ███████████▌92\n",
-      "　　　Ｄｏｇｓ█████▍43\n",
-      "Ｍｏｎｋｅｙｓ██▉23\n",
-      "　　Ｍｏｏｓｅ███████████▉95\n",
-      "　　　　　Ｍｅ0\n",
+      "𝐖𝐡𝐢𝐜𝐡 𝐬𝐡𝐨𝐮𝐥𝐝 𝐜𝐨𝐬𝐭 𝐥𝐞𝐬𝐬: 𝐚\n",
+      "𝐠𝐚𝐥𝐥𝐨𝐧 𝐨𝐟 𝐠𝐚𝐬 𝐨𝐫 𝐚 𝐠𝐚𝐥𝐥𝐨𝐧 𝐨𝐟 𝐦𝐢𝐥𝐤?\n",
+      "\n",
+      "ＹＥＳ　％　█████████43\n",
+      "　ＮＯ　％　████████████57\n",
       "\n"
      ]
     }
    ],
    "source": [
     "import piltdown.hbar_chart as hbar\n",
+    "import piltdown.util as util\n",
+    "import piltdown.literals as lit\n",
     "\n",
-    "print(hbar.hbar([92,43,23,95,0],[\"Cats\",\"Dogs\",\"Monkeys\",\"Moose\",\"Me\"]))"
+    "# Source: https://i.imgur.com/CswBFYU.jpg\n",
+    "print(util.bold(\"Which should cost less: a\\ngallon of gas or a gallon of milk?\\n\\n\") +\n",
+    "                hbar.hbar([43, 57], [\"YES % \", \"NO % \"]))"
    ]
   },
   {
@@ -884,6 +888,7 @@
     "- Tweet threads? Could it be done? *Should* it be done? Well, yes and no, of course...\n",
     "- Instead of telling people to have labels all the same length (eg. horizontal dot chart) just pad to max(len(...))\n",
     "- Basically, I'm not going to release this until the horizontal bar chart at least is done, as that's the most important one... possibly the vertical bar chart as well.\n",
+    "- Better examples. Better... or at least funnier.\n",
     "\n",
     "A list of plots I got somewhere that looked at a quick glance like they might be possible. Not to be interpreted as firm intentions. More or less in descending order of priority.\n",
     "\n",
